style(searchform): alignment fix

--- a/react/src/components/blocks/Header/SearchForm/SearchForm.styles.css
+++ b/react/src/components/blocks/Header/SearchForm/SearchForm.styles.css
@@ -8,12 +8,12 @@
 }
 
 .searchBarInput {
-  width: 31.25rem;
+  width: 40.25rem;
   height: 1.5rem;
   border: 0.1rem solid var(--slack-border-color);
   border-radius: 0.375rem;
   background-color: rgb(67, 30, 68);
-  padding-left: calc(30rem - 23rem);
+  padding-left: 1rem;
   box-shadow: inset 0 0 0 1px rgb(104, 74, 104);
   transition: all 0.5s ease-out;
 }
@@ -28,5 +28,12 @@
   position: absolute;
   font-size: 0.7rem;
   left: 5rem;
+  color: var(--slack-white);
+}
+
+.navSearchBar svg{
+  position: absolute;
+  font-size: 0.7rem;
+  left: 97%;
   color: var(--slack-white);
 }
